<resources>
    <string name="app_name">Digital House Foods</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="email">dh@digitalhouse.com</string>
    <string name="pwd">***********</string>
    <string name="log_in">LOG IN</string>
    <string name="register">Register</string>
    <string name="digitalhouse">DigitalHouse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>